# nmth

./: README.rst  meson.build  pyproject.toml
src/nmth/: __init__.py  meson.build
src/nmth/integrators/: __init__.py  runge_kutta.py  symplectic.py
src/nmth/linalg/: arnoldi.py  solver.py
src/nmth/optimizers/: __init__.py  model_based.py
