[project]
name="nmth"
authors = [
    {name="Daniel Knüttel", email="daniel.knuettel@physik.uni-regensburg.de"}
]
description = "Private library of numerical utilities"
requires-python=">=3.4"
readme="README.rst"
dependencies=['numpy']

version="0.0.1"

[project.urls]
repository="https://github.com/daknuett/nmth"
homepage="https://github.com/daknuett/nmth"

[build-system]
requires = ["meson-python"]
build-backend = 'mesonpy'
