python.install_sources(
  '__init__.py',
  pure: true,
  subdir: 'nmth'
)


python.install_sources(
  'optimizers/__init__.py', 'optimizers/model_based.py',
  pure: true,
  subdir: 'nmth/optimizers'
)


python.install_sources(
  'linalg/__init__.py', 'linalg/solver.py', 'linalg/arnoldi.py',
  pure: true,
  subdir: 'nmth/linalg'
)

python.install_sources(
  'integrators/__init__.py', 'integrators/runge_kutta.py', 'integrators/symplectic.py',
  pure: true,
  subdir: 'nmth/integrators'
)
